<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_Content"
            android:icon="@drawable/ic_menu_content"
            android:title="@string/menu_content"
            android:visible="false" />
        <item
            android:id="@+id/nav_settingsActivity"
            android:icon="@android:drawable/ic_menu_manage"
            android:title="@string/nav_settings" />
        <item
            android:id="@+id/nav_allPassesContentFragment"
            android:icon="?attr/actionModeCopyDrawable"
            android:title="@string/nav_AllPasses" />
    </group>
</menu>
